--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "global": "^4.4.0",
+    "react": "^18.0.0-rc.3",
+    "react-dom": "^18.0.0-rc.3",
+    "react-router-dom": "^6.9.0",
+    "react-scripts": "^5.0.1",
+    "react-typing-effect": "^2.0.5",
+    "styled-components": "^5.3.9",
+    "styled-normalize": "^8.0.7",
+    "styled-reset": "^4.4.5",
+    "swiper": "8.3.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
